# propositional-logic-prover-python

./: NOTICE  README.md  pyproject.toml
src/propositional_logic_prover/modules/: clause.py  cnf_converter.py  literal.py  prover.py  solution_viewer.py
src/propositional_logic_prover/scripts/: cli.py
tests/: cnf_convertor_test.py  prover_test.py
