[tool.poetry]
name = "propositional_logic_prover"
version = "0.1.0"
description = ""
license = "Apache-2.0"
authors = ["Raphael Bonatti"]
readme = "README.md"
packages = [{include = "propositional_logic_prover", from="src"}, {include = "modules", from="src/propositional_logic_prover"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
textx = "^4.0.1"
anytree = "^2.12.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[tool.poetry.scripts]
pltt-cli = "propositional_logic_prover.scripts.cli:entrypoint"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
